--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --color-primary: #123123;
+  --color-secondary: #123123;
+}
+
 html,
 body {
   padding: 0;
